--- a/TCC/Views/DriverRegisterPage.xaml
+++ b/TCC/Views/DriverRegisterPage.xaml
@@ -135,7 +135,8 @@
                                 BackgroundColor="White" 
                                 TextColor="#333" 
                                 FontSize="16"
-                                HeightRequest="45" 
+                                Format="dd/MM/yyyy"
+                                HeightRequest="45"
                                 MaximumDate="{Binding MaxDriverBirthDate}" />
                     <Label x:Name="BirthDateErrorLabel" 
                            FontSize="12" 
@@ -223,20 +224,18 @@
                     <Label Text="Gênero" 
                            FontSize="14" 
                            TextColor="#333" />
-                    <Border Stroke="#DDDDDD" 
-                            StrokeThickness="1" 
-                            StrokeShape="RoundRectangle 5,5,5,5" 
-                            HeightRequest="45">
-                        <Picker x:Name="GenderPicker" 
-                                SelectedIndex="0">
-                            <Picker.Items>
-                                <x:String>Masculino</x:String>
-                                <x:String>Feminino</x:String>
-                                <x:String>Outro</x:String>
-                                <x:String>Prefiro não dizer</x:String>
-                            </Picker.Items>
-                        </Picker>
-                    </Border>
+                    <Picker x:Name="GenderPicker"
+                            BackgroundColor="White"
+                            TextColor="#333"
+                            HeightRequest="45"
+                            SelectedIndex="0">
+                        <Picker.Items>
+                            <x:String>Masculino</x:String>
+                            <x:String>Feminino</x:String>
+                            <x:String>Outro</x:String>
+                            <x:String>Prefiro não dizer</x:String>
+                        </Picker.Items>
+                    </Picker>
                     <Label x:Name="GenderErrorLabel" 
                            FontSize="12" 
                            TextColor="Red" 
