Create account button on login page

--- a/TCC/Views/LoginPage.xaml
+++ b/TCC/Views/LoginPage.xaml
@@ -29,6 +29,7 @@
                     </Picker.ItemsSource>
                 </Picker>
                 <Button Text="Entrar" BackgroundColor="Red" TextColor="White" Clicked="OnLoginClicked" IsEnabled="True"/>
+                <Button Text="Criar Conta" BackgroundColor="Transparent" TextColor="Red" Clicked="Button_Clicked" IsEnabled="True"/>
             </VerticalStackLayout>
 
         </VerticalStackLayout>
