Added GARAGEM location for presentation

--- a/TCC/Views/ConfigurarViagemPage.xaml
+++ b/TCC/Views/ConfigurarViagemPage.xaml
@@ -122,6 +122,7 @@
                                     <x:String>UNESP</x:String>
                                     <x:String>Unisagrado</x:String>
                                     <x:String>UNOESTE</x:String>
+                                    <x:String>GARAGEM</x:String>
                                 </Picker.Items>
                             </Picker>
                         </Border>
